@@ -8,6 +8,7 @@ Version 1.0.9 to be released
 - Bug #510: CHtml::htmlButton() should render the label as the element body rather than value attribute (Qiang)
 - Bug #513: CNumberValidator does not validate as expected when the attribute value is not string (Qiang)
 - Bug #518: CFilterValidator uses call_user_func_array() incorrectly (Qiang)
+- Bug #522: array-like parameters in path info are not parsed correctly by CUrlManager (Qiang)
 - Bug #525: Invalid first chars in jquery.maskedinput.js (Qiang)
 - Bug: Set sequenceName in Oracle tables to be empty string so that yiic model command generates correct validation rules for PK (Qiang)
 - Enh #419: Improved the performance of lazy relational AR by avoiding joining when possible (Qiang)
